--- a/.github/workflows/blank.yaml
+++ b/.github/workflows/blank.yaml
@@ -37,5 +37,5 @@ jobs:
         with:
           push: true
           platforms: linux/amd64
-          tags: heronq02/viencoder:cuda11.8-final
+          tags: heronq02/viencoder:cuda11.8-dev
 
