--- a/venv.prod.yml
+++ b/venv.prod.yml
@@ -28,6 +28,7 @@ dependencies:
   - wheel=0.44.0=pyhd8ed1ab_0
   - xz=5.2.6=h166bdaf_0
   - pip:
+      - --index-url https://download.pytorch.org/whl/cu118
       - aiohappyeyeballs==2.4.0
       - aiohttp==3.10.5
       - aiosignal==1.3.1
