--- a/.github/workflows/blank.yaml
+++ b/.github/workflows/blank.yaml
@@ -20,7 +20,7 @@ jobs:
         - image: heronq02/viencoder:cuda11.8-final
           dockerfile: Dockerfile
         - image: heronq02/tritonserver:r24.07
-          dockerfile: Dockerfile.triton
+          dockerfile: tritonserver/Dockerfile
     steps:
       -
         name: Checkout
