--- a/.github/workflows/blank.yaml
+++ b/.github/workflows/blank.yaml
@@ -32,7 +32,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - 
-        name: Extract metadata (tags, labels) for Docker
+        name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v4
         with:
