--- a/.github/workflows/blank.yaml
+++ b/.github/workflows/blank.yaml
@@ -14,34 +14,27 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - image: heronq02/viencoder:cuda11.8-final
-            dockerfile: Dockerfile
-          - image: heronq02/tritonserver:r24.07
-            dockerfile: tritonserver/Dockerfile
     steps:
+      - name: Remove unnecessary files
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
       -
-        name: Checkout
-        uses: actions/checkout@v3
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       -
         name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - 
-        name: Extract metadata for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ matrix.image }}
       -
         name: Build and push
-        uses: docker/build-push-action@v4
-       	with:
-          file: ${{ matrix.dockerfile }}
+        uses: docker/build-push-action@v5
+        with:
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }
+          platforms: linux/amd64
+          tags: heronq02/viencoder:cuda11.8-final
